hphp/hack/test/typecheck/class_level_where_clauses/this_as/interface_method_lookup_01.php.legacy_decl.exp
File "interface_method_lookup_01.php", line 38, characters 10-18:
Invalid return type (Typing[4110])
File "interface_method_lookup_01.php", line 37, characters 23-23:
Expected D
File "interface_method_lookup_01.php", line 18, characters 26-26:
But got I
File "interface_method_lookup_01.php", line 50, characters 10-18:
Invalid return type (Typing[4110])
File "interface_method_lookup_01.php", line 49, characters 23-23:
Expected D
File "interface_method_lookup_01.php", line 14, characters 26-26:
But got C
File "interface_method_lookup_01.php", line 54, characters 10-18:
Invalid return type (Typing[4110])
File "interface_method_lookup_01.php", line 53, characters 23-23:
Expected I
File "interface_method_lookup_01.php", line 14, characters 26-26:
But got C
